create: responsive tablet for header

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,11 @@
+// connecting vars 
 @import 'variables'
+// connecting default settings
 @import 'settings'
+// connecting normalize
 @import 'normalize'
+// conecting header styles
 @import 'blocks/header'
+// conncting adaptive styles
+@import 'media'
+
