create: breadcrumb and hotel info

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,10 @@
 @import 'normalize'
 // conecting header styles
 @import 'blocks/header'
+// breadcrumbs
+@import 'blocks/breadcrumb'
+// hotel
+@import 'blocks/hotel'
 // conncting adaptive styles
 @import 'media'
 
