--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,7 +4,8 @@ body
   font-family: 'Mulish', sans-serif
   color: $text-color
   background-color: $secondary
-  
+button:active, button:focus 
+  outline: none
   
 .container 
   max-width: 1110px
