--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,10 +6,13 @@ body
   background-color: $secondary
 button:active, button:focus 
   outline: none
-  
+a 
+  text-decoration: none
+  color: inherit
 .container 
   max-width: 1110px
   margin: auto
 img 
   max-width: 100%
+
 
