create: section newsletter and responsive styles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'blocks/breadcrumb'
 // hotel
 @import 'blocks/hotel'
+// newsletter style
+@import 'blocks/newsletter'
 // conncting adaptive styles
 @import 'media'
 
