create: added reviews section, fixed hotel slider

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,8 @@
 @import 'blocks/hotel'
 // newsletter style
 @import 'blocks/newsletter'
+//styles for reviews
+@import 'blocks/reviews'
 // conncting adaptive styles
 @import 'media'
 
