--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -3,8 +3,8 @@
     max-width: 960px
   .slider 
     width: 590px
-  .swiper 
-    &-slide 
+  .hotel
+    &-slider 
       &__image 
         width: 100%
         height: 100%
@@ -34,15 +34,19 @@
     &-grid 
       flex-direction: column
     &__slider 
+
+      width: 100%
       margin-bottom: 30px
     &-right 
       flex-direction: row
   .booking 
     width: 340px
-  .slider 
-    width: 100%
   .map 
     width: 340px
+  .reviews 
+    &-slider 
+      &__item 
+        max-width: 580px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -67,7 +71,7 @@
         height: 1px
         background-color: $text-color
   .stars
-    flex-basis: 30%
+    flex-basis: content
   .hotel 
     &-name
       flex-basis: 100%
@@ -84,12 +88,12 @@
       &__offer 
         order: -1
         margin-left: 0
-  .slider 
-    height: 350px
   .hotel
     &-right 
       flex-direction: column
       min-height: 450px
+    &-slider 
+      height: 350px
   .booking 
     width: 100%
   .map 
@@ -100,17 +104,46 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews 
+    &-slider 
+      &__item 
+        padding: 0 30px 30px
+        &:after, &:before 
+          display: none
+      &__button 
+        top: 32px
+
+        &--prev 
+          left: 50%
+          margin-left: -65px
+          transform: translate(-50%, 0)
+        &--next 
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
 @media (max-width: 576px)
   .logo 
     width: 99px
-  .slider 
-    height: 278px
   .hotel 
     &__slider
       margin-bottom: 20px
+    &-slider 
+      height: 278px
   .newsletter 
     padding: 76px 0 83px 0
     &__title 
       margin-bottom: 37px
   .subscribe 
     width: 100%
+  .reviews 
+    &__title 
+      width: 245px
+      height: 46px
+      margin: auto
+      margin-bottom: 42px
+      font-size: 18px
+      line-height: 23px
+      text-align: center
+    &-slider
+      &__text
+        width: 219px
