--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,8 +12,10 @@
 @import 'blocks/hotel'
 // newsletter style
 @import 'blocks/newsletter'
-//styles for reviews
+// styles for reviews
 @import 'blocks/reviews'
+// connecting activities
+@import 'blocks/activities'
 // conncting adaptive styles
 @import 'media'
 
