create: added footer section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,8 @@
 @import 'blocks/reviews'
 // connecting activities
 @import 'blocks/activities'
+// connecting footer
+@import 'blocks/footer'
 // conncting adaptive styles
 @import 'media'
 
