--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,6 +6,8 @@ body
   background-color: $secondary
 button:active, button:focus 
   outline: none
+input:active, input:focus 
+  outline: none
 a 
   text-decoration: none
   color: inherit
