--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -226,3 +226,9 @@
       &-form 
         grid-row: 7
         grid-column: 1
+    &__info 
+      grid-row: 8
+      grid-column: 1
+    &__button
+      grid-row: 9
+      grid-column: 1
